tests/NormalTests/paczka2/big_fuzzy/99014135.err
Error in line 2: S821 S354 16,4
Error in line 1: KtGggMgI S354 13,0
Error in line 6: Ha5JldWPU S821 16,8
Error in line 21: Ul8j S963 6,1
Error in line 26: Ul8j S821 70,7
Error in line 18: S821 S821 52,2
Error in line 40: 6X8wLf S963 21,5
Error in line 46: Ul8j S963 58,7
Error in line 67: KtGggMgI S821 12,63
Error in line 50: KtGggMgI A976 46,2
Error in line 71: Ul8_ S821 25,2
Error in line 58: Ul8j S821 84,0
Error in line 69: KtGggMgI S821 42,2
Error in line 64: S821 A976 82,3
Error in line 73: Ul8j S963 67,6
Error in line 83: KtGggMgI A976 16,0
Error in line 103: uQtmon S354 40,0
Error in line 106: PGxhiN1 S963 60,0
Error in line 117: S821 A976 36,9
Error in line 134: 6X8wLf A976 15,
Error in line 115: uQtmon S821 71,4
Error in line 141: Ul8j S354 86,6
Error in line 129: Ha5JldWPU S821 139,9
Error in line 156: Ul8j S963 200,4
Error in line 173: S821 A9f6 f5,0
Error in line 172: Ul8j S963 77,8
Error in line 180: Ul8j A976 58,7
Error in line 185: S821 S821 62,15
Error in line 190: KtGggMgI S354 95,6
Error in line 201: PGxhiN1 S354 28,2
Error in line 200: S821 S354 11,4
Error in line 203: KtGggMgI A976 46,5
Error in line 199: Ul8j A976 40,4
Error in line 216: Ul8j S963 47,2
Error in line 212: KtGggMgI A976 41,1
Error in line 220: uQtmon S821 61,6
Error in line 228: 6X8wLf S963 329,1
Error in line 240: 6X8wLf S821 7,6
Error in line 234: uQtmon S963 73,4
